name:                servant-sample
version:             0.1.0.0
synopsis:            Minimum servant program just for learning
description:         Please see README.md
homepage:            https://github.com/cyclnoe-t/servant-sample
license:             BSD3
license-file:        LICENSE
author:              CycloneT
maintainer:          31123989+cyclone-t@users.noreply.github.com
copyright:           2017 CycloneT
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable servant-sample
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , servant-server
                     , wai
                     , warp
